--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,9 @@
 fastapi
 uvicorn
 transformers
-torch
 googletrans==4.0.0-rc1
 httpx
+numpy<2
+tensorflow==2.10.1
+tensorflow_hub
+tensorflow-text==2.10.0
